--- a/style.css
+++ b/style.css
@@ -39,3 +39,102 @@
   /* Section Heading */
   --padding-section: 8vh 3vw;
 }
+
+body {
+  font-family: "Titillium Web", sans-serif;
+  line-height: 1.7;
+  background-color: var(--color-quaternary);
+}
+
+.container {
+  display: grid;
+  grid-template-columns:
+    [container-start] 1fr [center-start]
+    repeat(10, [col-start] minmax(min-content, 11rem) [col-end])
+    [center-end] 1fr [container-end];
+  grid-template-rows: 100vh repeat(8, min-content);
+}
+
+.container > * {
+  font-size: 2rem;
+}
+
+/*********************** Main Styling ***********************/
+
+/* Header Section */
+header#header {
+  background-color: var(--color-primary);
+  grid-column: container-start / container-end;
+}
+
+/* Booking Content Section */
+section#booking-content {
+  background-color: var(--color-secondary);
+  grid-column: center-start / col-end 6;
+}
+
+/* Booking Date Section */
+section#booking-date {
+  background-color: var(--color-tertiary);
+  grid-column: col-start 7 / center-end;
+}
+
+/* Villas Section */
+section#villas {
+  background-color: var(--color-primary);
+  grid-column: container-start / container-end;
+}
+
+/* Motto Section */
+section#motto {
+  background-color: var(--color-secondary);
+  grid-column: container-start / container-end;
+}
+
+/* Evets Content */
+section#events-content {
+  background-color: var(--color-tertiary);
+  grid-column: container-start / col-end 9;
+}
+
+/* Events Text */
+section#events-text {
+  background-color: var(--color-primary);
+  grid-column: col-start 10 / center-end;
+}
+
+/* Gallery Text Section */
+section#gallery-text {
+  background-color: var(--color-secondary);
+  grid-column: center-start / col-end 1;
+}
+
+/* Gallery Carousel Section */
+section#gallery-carousel {
+  background-color: var(--color-tertiary);
+  grid-column: col-start 2 / container-end;
+}
+
+/* Features Content Section */
+section#features-content {
+  background-color: var(--color-primary);
+  grid-column: container-start / col-end 9;
+}
+
+/* Features Text Section */
+section#features-text {
+  background-color: var(--color-secondary);
+  grid-column: col-start 10 / center-end;
+}
+
+/* Testimonials Section */
+section#testimonials {
+  background-color: var(--color-tertiary);
+  grid-column: center-start / center-end;
+}
+
+/* Section Footer */
+footer#footer {
+  background-color: var(--color-primary);
+  grid-column: container-start / container-end;
+}
