--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ header#header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 6;
 }
 
 .header__main-nav input[type="checkbox"] {
@@ -508,8 +508,128 @@ section#booking-date {
 
 /* Villas Section */
 section#villas {
-  background-color: var(--color-primary);
   grid-column: container-start / container-end;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+  grid-gap: 2rem;
+}
+
+div[class^="villas"] {
+  padding: 2rem;
+  background-position: center;
+  background-size: cover;
+  transition: transform var(--transition-duration) ease-in-out;
+}
+
+div[class^="villas"]:hover,
+div[class^="villas"]:active {
+  transform: scaleX(1.05);
+}
+
+div[class^="villas"] h2[class^="villas"] {
+  font-size: var(--font-size-title);
+  padding: 0 2rem 1rem 0;
+  font-weight: 400;
+  color: white;
+  text-transform: uppercase;
+}
+
+div[class^="villas"] p[class^="villas"] {
+  font-size: 2rem;
+  margin: 1.5rem 0 4rem 0;
+  color: white;
+  font-weight: 400;
+}
+
+div[class^="villas"] a[class^="villas"]:link,
+div[class^="villas"] a[class^="villas"]:visited {
+  display: inline-block;
+  margin-bottom: 2rem;
+  background-color: white;
+  color: var(--color-primary);
+  z-index: 2;
+  overflow: hidden;
+}
+
+div[class^="villas"] a[class^="villas"]:hover,
+div[class^="villas"] a[class^="villas"]:active {
+  color: white;
+}
+
+div[class^="villas"] a[class^="villas"]:link::before,
+div[class^="villas"] a[class^="villas"]:visited::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 0%;
+  width: 100%;
+  z-index: -1;
+  background-color: var(--color-secondary);
+  transition: height var(--transition-duration) ease-in-out;
+}
+
+div[class^="villas"]:nth-child(n) a[class^="villas"]:link::before,
+div[class^="villas"]:nth-child(n) a[class^="villas"]:visited::before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+div[class^="villas"]:nth-child(2n) a[class^="villas"]:link::before,
+div[class^="villas"]:nth-child(2n) a[class^="villas"]:visited::before {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+div[class^="villas"] a[class^="villas"]:hover::before,
+div[class^="villas"] a[class^="villas"]:active::before {
+  height: 400%;
+}
+
+.villas__villa-1 {
+  background: linear-gradient(
+      var(--color-primary-m-light),
+      var(--color-tertiary-m-light)
+    ),
+    url("img/Villas/villa-1.jpg");
+}
+
+.villas__villa-2 {
+  background: linear-gradient(
+      var(--color-primary-m-light),
+      var(--color-tertiary-m-light)
+    ),
+    url("img/Villas/villa-2.jpg");
+}
+
+.villas__villa-3 {
+  background: linear-gradient(
+      var(--color-primary-m-light),
+      var(--color-tertiary-m-light)
+    ),
+    url("img/Villas/villa-3.jpg");
+}
+
+.villas__villa-4 {
+  background: linear-gradient(
+      var(--color-primary-m-light),
+      var(--color-tertiary-m-light)
+    ),
+    url("img/Villas/villa-4.jpg");
+}
+
+.villas__villa-5 {
+  background: linear-gradient(
+      var(--color-primary-m-light),
+      var(--color-tertiary-m-light)
+    ),
+    url("img/Villas/villa-5.jpg");
+}
+
+.villas__villa-6 {
+  background: linear-gradient(
+      var(--color-primary-m-light),
+      var(--color-tertiary-m-light)
+    ),
+    url("img/Villas/villa-6.jpg");
 }
 
 /* Motto Section */
@@ -606,6 +726,11 @@ footer#footer {
     grid-column-gap: 2vw;
     place-items: center;
   }
+
+  /* Villas Section */
+  section#villas {
+    grid-gap: 0;
+  }
 }
 
 /********************************************** 600px Mark *****************************************/
@@ -631,9 +756,19 @@ footer#footer {
     padding: 4rem;
     grid-template-columns: min-content;
   }
+
+  /* Villas Section */
+  div[class^="villas"] p[class^="villas"] {
+    margin: 1.5rem 0 4rem 0;
+  }
+
+  .booking-content__para,
+  div[class^="villas"] p[class^="villas"] {
+    font-size: 1.5rem;
+  }
 }
 
-/********************************************** 600px Mark *****************************************/
+/********************************************** 400px Mark *****************************************/
 @media screen and (max-width: 400px) {
   .booking-date__schedule {
     grid-template-columns: auto;
@@ -644,5 +779,10 @@ footer#footer {
   .booking-date__contact {
     justify-self: center;
     padding: 0 2rem;
+  }
+
+  /* Villas Section */
+  section#villas {
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   }
 }
