--- a/style.css
+++ b/style.css
@@ -634,8 +634,36 @@ div[class^="villas"] a[class^="villas"]:active::before {
 
 /* Motto Section */
 section#motto {
-  background-color: var(--color-secondary);
+  background-color: var(--color-primary);
   grid-column: container-start / container-end;
+
+  padding: 10vh 3vw;
+}
+
+.motto__content {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.motto__content--title {
+  font-size: var(--font-size-title);
+  padding: 0 2rem 1rem;
+  font-weight: 300;
+  color: white;
+  text-transform: uppercase;
+  margin-bottom: 2rem;
+  position: relative;
+}
+
+.motto__content--title::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 45%;
+  height: 0.2rem;
+  width: 10%;
+  background-color: white;
 }
 
 /* Evets Content */
@@ -763,7 +791,8 @@ footer#footer {
   }
 
   .booking-content__para,
-  div[class^="villas"] p[class^="villas"] {
+  div[class^="villas"] p[class^="villas"],
+  .motto__content--para {
     font-size: 1.5rem;
   }
 }
