The Gallery Text

--- a/style.css
+++ b/style.css
@@ -738,7 +738,8 @@ section#events-text {
   transform: rotate(0.25turn); /*90deg*/
 }
 
-.events-text__content--title {
+.events-text__content--title,
+.gallery-text__content--title {
   font-size: var(--font-size-title);
   font-weight: 500;
   color: white;
@@ -747,8 +748,17 @@ section#events-text {
 
 /* Gallery Text Section */
 section#gallery-text {
-  background-color: var(--color-secondary);
+  background-color: var(--color-primary);
   grid-column: center-start / col-end 1;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  place-items: center;
+}
+
+.gallery-text__content {
+  transform: rotate(-0.25turn);
 }
 
 /* Gallery Carousel Section */
@@ -860,24 +870,34 @@ footer#footer {
     margin: 1.5rem 0 4rem 0;
   }
 
-  section#events-content > div:first-child,
-  section#events-content > div:last-child {
-    border: none;
+  section#events-content,
+  section#gallery-carousel,
+  section#features-content {
+    grid-column: center-start / center-end;
   }
 
   section#events-content {
-    grid-column: center-start / center-end;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   }
 
-  section#events-text {
+  section#events-text,
+  section#gallery-text,
+  section#features-text {
     display: none;
+  }
+
+  section#events-content > div:first-child,
+  section#events-content > div:last-child,
+  section#features-content > div:first-child,
+  section#features-content > div:last-child {
+    border: none;
   }
 
   .booking-content__para,
   div[class^="villas"] p[class^="villas"],
   .motto__content--para,
-  section#events-content > div p[class*="para"] {
+  section#events-content > div p[class*="para"],
+  section#features-content > div p[class*="para"] {
     font-size: 1.5rem;
   }
 }
