--- a/style.css
+++ b/style.css
@@ -763,8 +763,80 @@ section#gallery-text {
 
 /* Gallery Carousel Section */
 section#gallery-carousel {
-  background-color: var(--color-tertiary);
   grid-column: col-start 2 / container-end;
+  height: 90vh;
+  overflow: hidden;
+  border: solid 0.2rem var(--color-secondary);
+  position: relative;
+}
+
+.gallery-carousel__img-container {
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.gallery-carousel__img-container--list {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  transition: transform 2s ease-in-out;
+}
+
+.gallery-carousel__img-container--list__item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.gallery-carousel__img-container--list__item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.gallery-carousel__btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.gallery-carousel__btn--right {
+  right: 0;
+}
+
+.gallery-carousel__nav {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 1rem;
+
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(10, 1fr);
+  grid-gap: 3rem;
+  height: 5%;
+}
+
+.gallery-carousel__nav--btn {
+  height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+  background-color: var(--color-secondary);
+  border: none;
+  cursor: pointer;
+}
+
+.current-img {
+  background-color: var(--color-primary);
 }
 
 /* Features Content Section */
@@ -810,6 +882,7 @@ footer#footer {
     padding: 4vh 3vw;
     grid-column: center-start / center-end;
   }
+
   .booking-content__title {
     text-align: center;
   }
@@ -899,6 +972,18 @@ footer#footer {
   section#events-content > div p[class*="para"],
   section#features-content > div p[class*="para"] {
     font-size: 1.5rem;
+  }
+
+  .gallery-carousel__btn i {
+    font-size: 5rem;
+  }
+
+  .gallery-carousel__nav {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-row-gap: 3vh;
+    grid-column-gap: 10vw;
+    height: 12%;
   }
 }
 
