--- a/style.css
+++ b/style.css
@@ -667,14 +667,16 @@ section#motto {
 }
 
 /* Evets Content */
-section#events-content {
+section#events-content,
+section#features-content {
   grid-column: container-start / col-end 9;
 
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
 
-section#events-content > div {
+section#events-content > div,
+section#features-content > div {
   padding: var(--padding-section);
   display: grid;
 
@@ -686,14 +688,16 @@ section#events-content > div {
   justify-items: start;
 }
 
-section#events-content > div h2[class*="title"] {
+section#events-content > div h2[class*="title"],
+section#features-content > div h2[class*="title"] {
   grid-area: title;
   font-size: var(--font-size-title);
   font-weight: 400;
   color: white;
 }
 
-section#events-content > div h2[class*="para"] {
+section#events-content > div h2[class*="para"],
+section#features-content > div h2[class*="para"] {
   grid-area: para;
   color: white;
   font-weight: 500;
@@ -725,7 +729,8 @@ section#events-content > div:last-child {
 }
 
 /* Events Text */
-section#events-text {
+section#events-text,
+section#features-text {
   background-color: var(--color-tertiary);
   grid-column: col-start 10 / center-end;
   display: grid;
@@ -734,12 +739,14 @@ section#events-text {
   place-items: center;
 }
 
-.events-text__content {
+.events-text__content,
+.features-text__content {
   transform: rotate(0.25turn); /*90deg*/
 }
 
 .events-text__content--title,
-.gallery-text__content--title {
+.gallery-text__content--title,
+.features-text__content--title {
   font-size: var(--font-size-title);
   font-weight: 500;
   color: white;
@@ -780,7 +787,7 @@ section#gallery-carousel {
   position: relative;
   height: 100%;
   width: 100%;
-  transition: transform 2s ease-in-out;
+  transition: transform var(--transition-duration) ease-in-out;
 }
 
 .gallery-carousel__img-container--list__item {
@@ -844,15 +851,33 @@ section#gallery-carousel {
 }
 
 /* Features Content Section */
-section#features-content {
-  background-color: var(--color-primary);
-  grid-column: container-start / col-end 9;
+section#features-content > div:first-child {
+  background: linear-gradient(
+      var(--color-secondary-m-light),
+      var(--color-secondary-m-light)
+    ),
+    url("img/Features/cocktail.jpg");
+  border-right: solid 0.2rem var(--color-secondary);
+}
+
+section#features-content > div:last-child {
+  background: linear-gradient(
+      var(--color-secondary-m-light),
+      var(--color-secondary-m-light)
+    ),
+    url("img/Features/surfing.jpg");
+  border-left: solid 0.2rem var(--color-secondary);
+}
+
+section#features-content > div:first-child,
+section#features-content > div:last-child {
+  background-size: cover;
+  background-position: left;
 }
 
 /* Features Text Section */
 section#features-text {
   background-color: var(--color-secondary);
-  grid-column: col-start 10 / center-end;
 }
 
 /* Testimonials Section */
@@ -953,7 +978,8 @@ footer#footer {
     grid-column: center-start / center-end;
   }
 
-  section#events-content {
+  section#events-content,
+  section#features-content {
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   }
 
